Fixed positioning of body to remove scrolling and bottom whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,13 @@
 /* Main Page */
 
+.appview {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+}
 .app {
   background-position: center;
   background-repeat: no-repeat;
